[tool.poetry]
name = "lab 12"
version = "0.1.0"
description = ""
authors = ["Hamza-Rashed <hamzarashed503@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.1"
matplotlib = "^3.3.1"
jupyterlab = "^2.2.6"
pandas = "^1.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
